<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@drawable/blacka"
                                             tools:context="com.mario_antolovic.animalinfo.MainActivity"
                                             android:id="@+id/constrain">


    <Button
            android:layout_width="160dp"
            android:layout_height="80dp"
            android:id="@+id/btn_rept"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/btn_nextp"
            android:fontFamily="@font/muli_bold"
            android:textSize="14sp"
            android:text="@string/reptiles"
            app:layout_constraintStart_toEndOf="@+id/btn_amphib"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_fish"
            app:layout_constraintHorizontal_bias="0.537"/>

    <Button
            android:layout_width="160dp"
            android:layout_height="80dp"
            android:id="@+id/btn_amphib"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/btn_nextp"
            android:fontFamily="@font/muli_bold"
            android:textSize="14sp"
            android:text="@string/amphibians"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_invertebrates"/>

    <Button
            android:layout_width="160dp"
            android:layout_height="80dp"
            android:id="@+id/btn_fish"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/btn_nextp"
            android:fontFamily="@font/muli_bold"
            android:textSize="14sp"
            android:text="@string/fish"
            app:layout_constraintStart_toEndOf="@+id/btn_invertebrates"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="44dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.537"/>

    <Button
            android:layout_width="160dp"
            android:layout_height="80dp"
            android:id="@+id/btn_invertebrates"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="44dp"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/btn_nextp"
            android:fontFamily="@font/muli_bold"
            android:textSize="14sp"
            android:text="@string/invertebrates"/>

    <Button
            android:layout_width="160dp"
            android:layout_height="80dp"
            android:id="@+id/btn_birds"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/btn_nextp"
            android:fontFamily="@font/muli_bold"
            android:textSize="14sp"
            android:text="@string/birds"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_amphib"/>

    <Button
            android:layout_width="160dp"
            android:layout_height="80dp"
            android:id="@+id/btn_mammals"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/btn_nextp"
            android:fontFamily="@font/muli_bold"
            android:textSize="14sp"
            android:text="@string/mammals"
            app:layout_constraintStart_toEndOf="@+id/btn_birds"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_rept"
            app:layout_constraintHorizontal_bias="0.537"/>
</android.support.constraint.ConstraintLayout>